--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,3 +39,6 @@ jobs:
 
       - name: Jalankan file python
         run: python nama.py
+  
+      - name: Secret Variable
+        run: echo ${{secret.NAMA_LENGKAP}}
