--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,4 +41,4 @@ jobs:
         run: python nama.py
   
       - name: Secret Variable
-        run: echo ${{secret.NAMA_LENGKAP}}
+        run: echo ${{ secrets.NAMA_LENGKAPt }}
